- s/^Terminal=0/Terminal=false/ s/^Terminal=1/Terminal=true/ to conform   freedesktop.org desktop-entry specification
Changed files:
    BasiliskII.desktop -> 1.2

--- a/BasiliskII.desktop
+++ b/BasiliskII.desktop
@@ -4,7 +4,7 @@ Comment=Macintosh emulator
 Comment[pl]=Emulator komputera Macintosh
 Exec=/usr/X11R6/bin/BasiliskII
 Icon=AppleX.png
-Terminal=0
+Terminal=false
 Type=Application
 
 # vi: encoding=utf-8
