- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    BasiliskII.desktop -> 1.6

--- a/BasiliskII.desktop
+++ b/BasiliskII.desktop
@@ -1,10 +1,9 @@
 [Desktop Entry]
-Encoding=UTF-8
 Name=BasiliskII
 Comment=Macintosh emulator
 Comment[pl]=Emulator komputera Macintosh
 Exec=/usr/bin/BasiliskII
-Icon=AppleX.png
+Icon=AppleX
 Terminal=false
 Type=Application
 Categories=Utility;Emulator;
